# aws-ket

./: CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  bumpversion.cfg  initialize.py  pyproject.toml  setup.py
.github/workflows/: build.yaml
aws-ket/: app.py
awsket/: __main__.py  app.py  init.py  ket.py
awsket/example/: demo_decrypt_script.py  demo_encrypt_script.py  demo_init_script.py
awsket/tests/: test_integration.py  test_unit.py
docs/: awsket.rst  conf.py  example.md  index.md  index.rst  modules.rst  requirements.txt  src.rst
scripts/: decrypt.py  encrypt.py
src/: __init__.py  __main__.py  app.py  cleanup.py  decrypt.py  encrypt.py  init.py  initialize.py  ket.py
src/helper/: s3_helper.py
src/test/: integration_test.py  sample.txt  unit_tests.py
src/tests/: test_integration.py  test_unit.py
